Alignment fixes
Alignment fixes

--- a/old-site/css/video.css
+++ b/old-site/css/video.css
@@ -12,6 +12,15 @@ html, body {
   width: 1000px;
   height: 100%;
 }
+.clearfix:before,
+.clearfix:after {
+  content: "";
+  display: table;
+}
+ 
+.clearfix:after {
+  clear: both;
+}
 /* Heading */
 .heading {
   height: 25px;
@@ -47,21 +56,42 @@ h2 {
   background-color: transparent;
   text-decoration: underline;
 }
+.videobox {
+  width: 100%;
+  background-color: black;
+  display: inline-block;
+  height: 40vh;
+}
 video {
   display: block;
   text-align: center;
   position: relative;
   margin-top: 0;
-  margin-left: 10%;
+  margin-right: auto;
+  margin-left: auto;
   background-color: black;
+  height: 40vh;
 }
 p {
   font-size: 36px;
+  margin-left: 6%;
+}
+.beige-testimonial {
+  width: 40%;
+  background-color: #C2A385;
+  height: 70px;
+  padding-top: 10px;
+  padding-left: 10px;
+  border-radius: 10px 10px 10px 10px;
+  margin-left: 6%;
+  margin-bottom: 20px;
 }
 .beige-testimonial p {
-  font-size: 14px;
+  font-size: 12px;
 }
 .beige-testimonial img {
   border-radius: 100%;
+  float: left;
   height: 60px;
+  margin-right: 20px;
 }
